Step form steps issues on mobile fixed

--- a/patient/css/booking.css
+++ b/patient/css/booking.css
@@ -1146,6 +1146,9 @@
             margin-left: 0px;
             margin-right: 0px;
         }
+        .border {
+            border: none!important
+        }
         .size {
             flex-wrap: wrap!important;
         }
@@ -1158,9 +1161,18 @@
             margin-right: 0px !important;
             text-align: -webkit-center;
         }
+        .bord {
+            padding-left: 5px;
+            padding-right: 5px;
+            margin-left: 5px;
+            margin-right: 5px
+        }
+        #book-in-person.border {
+            border: none;
+        }
         .card-body,
         .booking-card {
-            padding-top: 10px;
+            padding: 10px !important;
         }
         .wizard>.actions>ul {
             width: 100%;
@@ -1239,5 +1251,7 @@
         .text-center,
         .m-t-10 {
             border: none!important;
+            margin-right: 1px;
+            margin-left: 1px;
         }
     }
